test/syntax/08-struct_type-1-err.c
// ======================================================================

/* struct_type -> STRUCT var LBRACE member_declaration_list RBRACE */

// ======================================================================

struct human {
  int age;
{ h1;		// error: not RBRACE

void main(void)
{

}

// ======================================================================
